Fixed Logo & Menu Alignment Issue in Mobile

--- a/wp-content/plugins/do-action/assets/css/frontend.css
+++ b/wp-content/plugins/do-action/assets/css/frontend.css
@@ -230,6 +230,9 @@
 	.single-event .non-profit-options li {
 		width: 100%;
 	}
+	.site-header{ display:flex;justify-content: space-between; }
+  .storefront-primary-navigation { margin-top:0px;display:flex;align-items:center; }
+  .site-branding { width:100%; }
 }
 
 #event-application-form{
